<resources>
    <string name="app_name">My SunSign</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_welcome">Welcome to My SunSign</string>
    <string name="title_onboarding">Setiap gerakan tangan adalah suara hati yang dapat didengar oleh semua</string>
    <string name="next">Continue</string>
    <string name="sign_in"><u>Sign In</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="forgot"><u>Forgot Password ?</u></string>
    <string name="default_web_client_id">142924922216-e9688388l8g2hb2cml7evh33ml7aiovj.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="go">Start Playing</string>
    <string name="play">Play Again</string>
    <string name="score">Your Score is 5 out of 5</string>
    <string name="image">image</string>
    <string name="result">Result</string>
    <string name="congrats">Hope You Learned Something New!!</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

</resources>

