<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/bg1"
    android:padding="20dp">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="start"
        android:src="@drawable/back_1" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"/>

    <ImageView
        android:id="@+id/tv_trophy"
        android:layout_width="wrap_content"
        android:layout_height="255dp"
        android:contentDescription="@string/image"
        android:src="@drawable/bgresult"/>

    <TextView
        android:id="@+id/congrats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/congrats"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/score"
        android:fontFamily="@font/poppins_medium"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFinish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/buttom"
        android:text="@string/play"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_medium"/>

</LinearLayout>