<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="0dp">

    <!-- Ilustrasi -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="85dp"
        android:adjustViewBounds="true"
        android:background="@drawable/rounded"
        android:padding="25dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon" />


    <!-- Text Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/title_welcome"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <!-- Text Subtitle -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/title_onboarding"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="#666666"
        android:lineSpacingExtra="4dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp" />

    <!-- Tombol Continue -->
    <Button
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttom"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:layout_marginTop="55dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:elevation="4dp"/>

</LinearLayout>